<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="cl.sidan.appen.MainActivity"
    android:theme="@style/DefaultTheme" >

    <item android:id="@+id/logout"
        android:title="@string/menu_log_out"
        android:orderInCategory="100"
        app:showAsAction="never" />

    <item android:id="@+id/exit_app"
        android:title="@string/menu_exit_app"
        android:orderInCategory="110"
        app:showAsAction="never" />

    <item android:id="@+id/kumpaner"
        android:title="@string/kumpaner"
        android:icon="@drawable/nopo"
        android:orderInCategory="130"
        app:showAsAction="always" />

    <item android:id="@+id/report_beer"
        android:title="@string/olsug"
        android:icon="@drawable/olsug_32"
        android:orderInCategory="130"
        app:showAsAction="always" />
</menu>
