<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:id="@+id/change_password_link"
        android:textColor="@color/text_link"
        android:gravity="center"
        android:text="@string/change_password" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/settings_offline"
        android:id="@+id/offline_info"
        android:layout_gravity="center"
        android:textColor="#ff0000"
        android:visibility="invisible" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rapporteraPosition"
        android:id="@+id/position_setting"
        android:layout_gravity="center_horizontal" />

    <SeekBar
        android:id="@+id/fontsize"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:progress="150"
        android:max="450" />

    <TextView
        android:id="@+id/fontsize_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textSize="15sp"
        android:text="@string/fontsize"
        android:textColor="@color/text_winered" />
</LinearLayout>