<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:background="@color/background_turqoise"
    android:weightSum="1">
    <!--    xmlns:tools="http://schemas.android.com/tools"
        tools:context="cl.sidan.appen.VersionUpdateActivity" -->

    <TextView android:id="@+id/version_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/version_current_version"
        android:layout_gravity="center_horizontal" />

    <TextView android:id="@+id/version_update_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/letar_uppdateringar"
        android:layout_gravity="center_horizontal"
        android:textColor="#ff0000" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:id="@+id/scrollView"
        android:layout_gravity="center_horizontal"
        android:layout_weight="1">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:text="@string/default_release"
            android:id="@+id/textView3" />
    </ScrollView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/version_link"
        android:textSize="18sp" />
    <!--<Button android:id="@+id/version_update"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/version_update"
        android:enabled="false"
        android:onClick="performVersionUpdate"  />-->

</LinearLayout>
