<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/write_drawer_layout"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/background"
    android:weightSum="1">

    <EditText
        android:id="@+id/write_entry_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minLines="5"
        android:maxLines="20"
        android:gravity="top"
        android:padding="10dp"
        android:inputType="textMultiLine|textCapSentences"
        android:hint="@string/write_entry_hint" />

    <Button
        android:id="@+id/write_entry_send"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:textColor="?attr/textColorSecondary"
        android:text="@string/write_entry_send" />

    <RelativeLayout
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Spinner
            android:id="@+id/number_of_beers"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:layout_alignParentStart="true"
            />

        <CheckBox
            android:id="@+id/write_entry_secret"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="30dp"
            android:layout_centerInParent="true"
            android:text="@string/write_entry_secret_text" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/choose_kumpaner"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:src="@drawable/nopo"
            />
        <TextView
            android:id="@+id/kumpaner"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_toEndOf="@+id/choose_kumpaner"
            android:text="#68, #71" />
    </RelativeLayout>

    <com.google.android.gms.maps.MapView
        android:id="@+id/write_entry_position"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:visibility="gone" />

    <TextView
        android:id="@+id/write_entry_position_alt_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:text="Kunde inte hitta din position"
        android:visibility="gone" />

    <ImageView
        android:id="@+id/write_entry_imagechoosen"
        android:contentDescription="@string/imagechosen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

</LinearLayout>
