<?xml version="1.0" encoding="utf-8"?>

<com.sileria.android.view.SlidingTray
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/drawer"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:handle="@+id/handle"
    android:content="@+id/content">

    <ImageView
        android:id="@+id/handle"
        android:src="@drawable/expand_menu"
        android:layout_width="40dip"
        android:layout_height="80dip" />

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/content"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:choiceMode="singleChoice"
        android:divider="@android:color/transparent"
        android:dividerHeight="0dp"
        android:background="#111"
        android:theme="@style/DrawerTheme"
        android:weightSum="1">

        <CheckBox android:id="@+id/write_entry_secret"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/write_entry_secret"
            android:textColor="#ffffff" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray"
            android:layout_margin="10dp"
            android:paddingBottom="20dp" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:padding="10dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/imageView"
                android:src="@drawable/olsug_32"
                android:contentDescription="@string/olsug" />

            <Spinner android:id="@+id/write_entry_enheter"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:spinnerMode="dialog"
                android:entries="@array/antalEnheterInklNoll"
                android:background="#ffffff" />
        </LinearLayout>

        <Button
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:id="@+id/bilduppladdning"
            android:text="@string/bilduppladdning" />

    </LinearLayout>

</com.sileria.android.view.SlidingTray>
